Refactor: Replace traditional iteration and initialization patterns with enhanced for-loops, lambdas, and type inference, simplifying code structure and improving readability.